fix: Remove view-configuration overflow

--- a/war/src/main/less/base/style.less
+++ b/war/src/main/less/base/style.less
@@ -673,7 +673,6 @@ img.icon-help {
 /* ============================ list view entries ======================== */
 div.listview-jobs {
   max-height: 300px;
-  overflow: auto;
 }
 
 /* ============================ parameters form ========================== */
